Leverage URI.isAbsolute() to reduce the number of exceptions to handle.