@@ -16,7 +16,7 @@ package edu.vt.middleware.ldap.ldif;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.Serializable;
-import java.net.URL;
+import java.net.URI;
 import java.util.Iterator;
 import javax.naming.NamingException;
 import javax.naming.directory.SearchResult;
@@ -166,11 +166,23 @@ public class Ldif implements Serializable
                 .append(LINE_SEPARATOR);
             }
           } else {
+            // use URI.isAbsolute() to prevent exception handling
+            // for every value
+            // would like to use a regex pattern here if possible
+            boolean isUrl = false;
             try {
-              new URL((String) attrValue);
+              final URI uri = new URI((String) attrValue);
+              if (uri.isAbsolute()) {
+                uri.toURL();
+                isUrl = true;
+              }
+            } catch (Exception e) {
+              isUrl = false;
+            }
+            if (isUrl) {
               entry.append(attrName).append(":< ").append(attrValue).append(
                 LINE_SEPARATOR);
-            } catch (Exception e) {
+            } else {
               entry.append(attrName).append(": ").append(attrValue).append(
                 LINE_SEPARATOR);
             }
